# Fed_learning_with_muti-model

./: .gitignore  README.md  data_split.ipynb  heart_disease.csv  main.py  manage.py  pyproject.toml  requirements.txt  test_client.py  utils.py
Federated_learning_with_differential_privacy/: Fed_Svm copy.py  Fed_Svm.py
datasets/: iris.csv  winequality-red.csv
fed_cnn/: main.py  train.py
fed_cnn/utils/: dataset.py
fed_dt/: DescisionTree.ipynb  fed_dt.py
fed_kmeans/: kmeans_class.py  kmeans_train.py  main.py  train.py
fed_kmeans/clustering/: kmeans_python.py  kmeans_sklearn.py  utils_stats.py
fed_kmeans/clustering/utils/: datasets.py  net.py  options.py  train.py
fed_lgr/: centralized.py  client.py  heart_disease_dataset.py  iris.csv  main.py  model.py  server.py  train.py
fed_lgr/checkpoints/: guest_bias.npy  guest_weights.npy
fed_lgr2/: client.py
fed_lr/: ML.py  broker.py  client.py  dataset.py  fed_lr.pkl  main.py  train.py
fed_svm/: main.py  train.py
fl_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
utils/: datasets.py  load_data.ipynb  net.py  net2.py  options.py  transmit.py
