[project]
name = "fed-algs"
version = "0.1.0"
description = "A collection of federated learning algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==4.2",
    "flwr>=1.18.0",
    "gunicorn>=23.0.0",
    "matplotlib>=2.2.5",
    "numpy>=1.12.1",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.9",
    "scikit-learn>=0.21.0",
    "torch>=1.2.0",
    "torchvision>=0.4.0",
]
